--- a/client/brunoaugusto/style/style.css
+++ b/client/brunoaugusto/style/style.css
@@ -7,26 +7,6 @@ body{
     background: #000000e6;
 }
 
-@media (max-width: 768px) {   
-    .lista__container{
-    flex-direction: column;
-    width: 90%;
-}
-.lista__container__noticia{
-    width: 100% !important;
-}
-.lista__container__noticia__elementos p{
-    font-size: 2.8vw !important;
-}
-
-
-}
-@media (max-width: 425px){
-.lista__container__noticia img{
-width: 100px !important;
-height: 100px !important;
-}
-}
 
 .lista{
     display: flex;
@@ -59,10 +39,11 @@ height: 100px !important;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-width: 300px;
 }
 
 .lista__container__noticia__elementos--titulo h2{
-    font-size: 30px;
+    font-size: 1.6vw;
     font-family: "fredoka";
     color: #fff;
 }
@@ -70,6 +51,7 @@ height: 100px !important;
 .lista__container__noticia__elementos--titulo i{
     cursor: pointer;
     color: aliceblue;
+    padding: 8px;
 }
 
 .lista__container__noticia__elementos{
@@ -109,4 +91,37 @@ height: 100px !important;
 
 .hide{
     display: none !important;
+}
+
+@media (max-width: 1200px){
+    .lista__container__noticia__elementos--titulo{
+        min-width: initial !important;
+    }
+    
+}
+
+@media (max-width: 768px) {  
+    .lista__container__noticia__elementos--titulo h2{
+        font-size: 3vw;
+    } 
+    .lista__container{
+    flex-direction: column;
+    width: 90%;
+}
+.lista__container__noticia{
+    width: 100% !important;
+}
+.lista__container__noticia__elementos p{
+    font-size: 2.8vw !important;
+}
+
+}
+@media (max-width: 425px){
+    .lista__container__noticia__elementos--titulo h2{
+        font-size: 4vw;
+    }
+.lista__container__noticia img{
+width: 100px !important;
+height: 100px !important;
+}
 }
