--- a/client/brunoaugusto/style/style.css
+++ b/client/brunoaugusto/style/style.css
@@ -112,8 +112,8 @@ h1{
     margin: 0 8px 0 8px;
     
 }
-.blocos__ordenacao div a{
-    color: aliceblue;
+.blocos__ordenacao div button{
+    color: #185c5f;
 }
 
 @media (max-width: 768px) {
