--- a/client/brunoaugusto/style/style.css
+++ b/client/brunoaugusto/style/style.css
@@ -162,6 +162,14 @@ h1{
     align-items: center;
     margin-bottom: 50px;
 }
+.lista__container__noticia--erro{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 15vw;
+    color: wheat;
+    margin-bottom: 50px;
+}
 
 .lista__container__noticia img{
     width: 150px;
