--- a/client/brunoaugusto/style/style.css
+++ b/client/brunoaugusto/style/style.css
@@ -238,6 +238,86 @@ h1{
     cursor: pointer;
 }
 
+.loading{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: #000;
+    z-index: 999;
+    flex-direction: column;
+}
+
+.loading span{
+    color: var(--icon-color);
+    font-size: 6vw;
+    
+    
+}
+
+.loading span:nth-child(2){
+    font-size: 2vw;
+    animation-delay: 3s;
+}
+
+.loading__elements {
+    display: flex;
+    margin-left:5px ;
+    align-items: baseline;
+  }
+  .loading__elements div {
+    width: 6px;
+    height: 6px;
+    background: var(--icon-color);
+    border-radius: 50%;
+    animation: loading__elements 1.2s linear infinite;
+  }
+  .loading__elements div:nth-child(1) {
+    animation-delay: 0s;
+  }
+  .loading__elements div:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+  .loading__elements div:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+  .loading__elements div:nth-child(4) {
+    animation-delay: 0.3s; }
+  .loading__elements div:nth-child(5) {
+    animation-delay: 0.4s;
+  }
+  .loading__elements div:nth-child(6) {
+    animation-delay: 0.5s;
+  }
+  .loading__elements div:nth-child(7) {
+    animation-delay: 0.6s;  }
+  .loading__elements div:nth-child(8) {
+    animation-delay: 0.7s;
+  }
+  .loading__elements div:nth-child(9) {
+    animation-delay: 0.8s;
+  }
+  .loading__elements div:nth-child(10) {
+    animation-delay: 0.9s;
+  }
+  .loading__elements div:nth-child(11) {
+    animation-delay: 1s;
+  }
+  .loading__elements div:nth-child(12) {
+    animation-delay: 1.1s;
+  }
+  @keyframes loading__elements {
+    0%, 20%, 80%, 100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.5);
+    }
+  }
+  
+
 @media (max-width: 1200px){
     .lista__container__noticia__elementos--titulo{
         min-width: initial;
