--- a/client/brunoaugusto/style/style.css
+++ b/client/brunoaugusto/style/style.css
@@ -49,7 +49,6 @@ background-color: var(--detalhes-color);
 
 .header__container__blocos{
     display: flex;
-   
     align-items: center;
     justify-content: space-between;
     align-items: flex-start;
@@ -85,7 +84,7 @@ h1{
 .categoria{
     cursor: pointer;
     margin-bottom: 5px;
-    padding: 0 5px 0 5px;
+    padding: 0 5px;
     background: none;
     border: none;
     color: var(--strings-color);
@@ -137,7 +136,7 @@ h1{
     font-family: 'fredoka';
 }
 .blocos__ordenacao div {
-    margin: 0 8px 0 8px;
+    margin: 0 8px;
     
 }
 .blocos__ordenacao div button{
